# sandal

./: .copier-answers.yml  .header.yaml  pyproject.toml
.github/workflows/: check-sources.yml
docs/: conf.py
sandal/: __init__.py  cli.py  notebook.py  project.py
